--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-scripts": "3.4.3",
     "react-webcam": "^5.2.0",
     "styled-components": "^5.2.0"
