--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.2",
     "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-webcam": "^5.2.0",
     "styled-components": "^5.2.0"
